--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 <html lang="en">
 
   <head>
-    <title>SQuAD Demo</title>
+    <title>BERT DRCD Demo</title>
     <meta charset="utf-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -24,8 +24,8 @@
     <link rel="manifest" href="/assets/favicon/site.webmanifest">
     <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#003459">
     <link rel="shortcut icon" href="/assets/favicon/favicon.ico">
-    <meta name="apple-mobile-web-app-title" content="SQuAD Demo">
-    <meta name="application-name" content="SQuAD Demo">
+    <meta name="apple-mobile-web-app-title" content="BERT DRCD Demo">
+    <meta name="application-name" content="BERT DRCD Demo">
     <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="msapplication-TileImage" content="/assets/favicon/mstile-144x144.png">
     <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml">
@@ -45,7 +45,7 @@
 
       <main id="main" role="main" class="container py-3">
         <header>
-          <h1>SQuAD Demo</h1>
+          <h1>BERT DRCD Demo</h1>
         </header>
 
         <hr>
