--- a/src/index.html
+++ b/src/index.html
@@ -10,33 +10,33 @@
     <meta charset="utf-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/assets/favicon/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/assets/favicon/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/assets/favicon/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/assets/favicon/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/assets/favicon/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/assets/favicon/apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/assets/favicon/site.webmanifest">
-    <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#003459">
-    <link rel="shortcut icon" href="/assets/favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="57x57" href="./assets/favicon/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="./assets/favicon/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./assets/favicon/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./assets/favicon/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./assets/favicon/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="./assets/favicon/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./assets/favicon/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./assets/favicon/site.webmanifest">
+    <link rel="mask-icon" href="./assets/favicon/safari-pinned-tab.svg" color="#003459">
+    <link rel="shortcut icon" href="./assets/favicon/favicon.ico">
     <meta name="apple-mobile-web-app-title" content="SQuAD Demo">
     <meta name="application-name" content="SQuAD Demo">
     <meta name="msapplication-TileColor" content="#2b5797">
-    <meta name="msapplication-TileImage" content="/assets/favicon/mstile-144x144.png">
-    <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml">
+    <meta name="msapplication-TileImage" content="./assets/favicon/mstile-144x144.png">
+    <meta name="msapplication-config" content="./assets/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 
-    <link rel="stylesheet" href="/assets/vendor/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/assets/vendor/bootstrap-vue/css/bootstrap-vue.min.css" />
-    <link rel="stylesheet" href="/assets/vendor/fontawesome/css/all.min.css" />
-    <link rel="stylesheet" href="/assets/vendor/sweetalert2/css/sweetalert2.min.css" />
+    <link rel="stylesheet" href="./assets/vendor/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./assets/vendor/bootstrap-vue/css/bootstrap-vue.min.css" />
+    <link rel="stylesheet" href="./assets/vendor/fontawesome/css/all.min.css" />
+    <link rel="stylesheet" href="./assets/vendor/sweetalert2/css/sweetalert2.min.css" />
 
-    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
 
   <body>
@@ -115,7 +115,7 @@
               <input v-model="restext" class="form-control bg-light" placeholder="The Generated Answer" disabled></input>
 
               <small class="form-text text-success">Ground truth:</small>
-              <input v-for="anstext in anslist" v-model="anstext" class="form-control bg-light mb-1" placeholder="The Ground Truth" disabled></input>
+              <input v-for="(_,i) in anslist" v-model="anslist[i]" class="form-control bg-light mb-1" placeholder="The Ground Truth" disabled></input>
 
             </div>
 
@@ -137,15 +137,15 @@
       </footer>
 
     <!-- Scripts -->
-      <script src="/assets/vendor/vue/js/vue.js"></script>
-      <!-- <script src="/assets/vendor/vue/js/vue.min.js"></script> -->
-      <script src="/assets/vendor/vue-resource/js/vue-resource.min.js"></script>
-      <script src="/assets/vendor/babel-polyfill/js/polyfill.min.js"></script>
-      <script src="/assets/vendor/bootstrap-vue/js/bootstrap-vue.min.js"></script>
-      <script src="/assets/vendor/sweetalert2/js/sweetalert2.min.js"></script>
+      <!-- <script src="./assets/vendor/vue/js/vue.js"></script> -->
+      <script src="./assets/vendor/vue/js/vue.min.js"></script>
+      <script src="./assets/vendor/vue-resource/js/vue-resource.min.js"></script>
+      <script src="./assets/vendor/babel-polyfill/js/polyfill.min.js"></script>
+      <script src="./assets/vendor/bootstrap-vue/js/bootstrap-vue.min.js"></script>
+      <script src="./assets/vendor/sweetalert2/js/sweetalert2.min.js"></script>
 
-      <script src="/data/data.js"></script>
-      <script src="/assets/js/main.js"></script>
+      <script src="./data/data.js"></script>
+      <script src="./assets/js/main.js"></script>
 
   </body>
 </html>
